Fix invisible scrollbars
Fixes https://github.com/lovasoa/SQLpage/discussions/17

--- a/sqlpage/sqlpage.css
+++ b/sqlpage/sqlpage.css
@@ -1,12 +1,23 @@
 /* !include https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta19/dist/css/tabler.min.css */
 /* !include https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta19/dist/css/tabler-vendors.min.css */
 
-[data-bs-theme=dark] .alert:not(.alert-important) {
+[data-bs-theme="dark"] .alert:not(.alert-important) {
   /* See https://github.com/tabler/tabler/issues/1607 */
   background-color: var(--tblr-bg-surface);
   color: inherit;
 }
 
 td > p {
-    margin: 0;
+  margin: 0;
+}
+
+/* https://github.com/tabler/tabler/issues/1648 */
+* {
+  scrollbar-color: var(--tblr-primary) var(--tblr-bg-surface-dark) !important;
+}
+::-webkit-scrollbar {
+  width: 4px !important;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--tblr-primary) !important;
 }
